--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/logo.png" />
+  <link rel="icon" type="image/png" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Primary Meta Tags -->
+  <title>WhyApp — Conversa segura</title>
+  <meta name="title" content="WhyApp — Conversa segura" />
+  <meta name="description" content="Converse com amigos seus contatos e mais com segurança de ponta-a-ponta." />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="/assets/whyAppLogo.png" />
+  <meta property="og:title" content="WhyApp — Conversa segura" />
+  <meta property="og:description" content="Converse com amigos seus contatos e mais com segurança de ponta-a-ponta." />
+  <meta property="og:image" content="/assets/whyAppLogo.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://whyapp.onrender.com/register" />
+  <meta property="twitter:title" content="WhyApp — Conversa segura" />
+  <meta property="twitter:description"
+    content="Converse com amigos seus contatos e mais com segurança de ponta-a-ponta." />
+  <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
   <title>WhyApp</title>
 </head>
 
