--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     content="Converse com amigos seus contatos e mais com segurança de ponta-a-ponta." />
   <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+
   <title>WhyApp</title>
 </head>
 
